--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'>STAQ Blog</a>
+          <a class="navbar-brand" href="#"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png' class="logo">STAQ Blog</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
