--- a/css/main1.css
+++ b/css/main1.css
@@ -12,6 +12,13 @@
    background-color:#555;
  }
 
+.post-list {
+  color: #074CBA;
+}
 .post-list a {
   color: #0ac920;
+}
+
+footer {
+  bottom: fixed;
 }
