--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <!--<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>-->
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
