include header and footer from default page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,14 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+   {% include header.html %}
+
+    <div class="jumbotron">
+      <div class="container">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
 
 </article>
