--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,15 @@
 ---
 layout: default
 ---
+ {% include head.html %}
+
+ {% include header.html %}
+
+    <div class="jumbotron">
+      <div class="container">
+      </div>
+    </div>
+    
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <!--<header class="post-header">-->
@@ -11,14 +20,7 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-   {% include header.html %}
-
-    <div class="jumbotron">
-      <div class="container">
-        {{ content }}
-      </div>
-    </div>
+  
+</article>
 
     {% include footer.html %}
-
-</article>
