--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,32 @@
+.logo {
+  max-width: 50px;
+  max-height: 20px;
+  display: float;
+}
+.logo img {
+  max-width: 100px;
+  max-height: 20px;
+  float: left;
+}
+ nav.navbar.navbar-inverse.navbar-fixed-top {
+   background-color:#555;
+ }
+
+.home .page-heading {
+  color: #6E0DD6;
+}
+.post-list {
+  color: #074CBA;
+}
+.post-list a {
+  color: #0ac920;
+}
+
+footer {
+  bottom: fixed;
+  color: #E30522;
+}
+
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
