--- a/css/main.scss
+++ b/css/main.scss
@@ -82,6 +82,8 @@ nav {
     background:#999;
 }
 
-.jumbotron {
-    background:#fdfdfd;
+html {
+    background-color: #fdfdfd;
+    background-repeat: repeat;
 }
+
