--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
            <a class="navbar-brand logo" href="/staq"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right wrapper>
+          <form class="navbar-form navbar-right">
             <!--<div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
             </div>
