--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
-<header></header> <!--class="site-header"-->
+<html>
+  <header>
 
   <div class="wrapper">
 
@@ -31,4 +32,5 @@
 
   </div>
 
-</header>
+  </header>
+</html>
