color change tester

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: green; //#fdfdfd//;
+$background-color: white; //#fdfdfd//;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
@@ -82,9 +82,3 @@ nav {
     background:#999;
 }
 
-html {
-    body {
-        min-height: 100%;
-        background-color: green;
-}
-}
