--- a/css/main.scss
+++ b/css/main.scss
@@ -75,7 +75,7 @@ $on-laptop:        800px;
 
 footer {
   bottom: fixed;
-  color: #fdfdfd;
+  background-color: red;//#fdfdfd;
   position: bottom;
 }
 
