--- a/css/main.scss
+++ b/css/main.scss
@@ -77,7 +77,7 @@ footer {
   bottom: fixed;
   background-color: red;//#fdfdfd;
   position: bottom;
-  min-height: 100%;
+  min-height: 600px;
 }
 
 nav {
