--- a/css/main.scss
+++ b/css/main.scss
@@ -75,7 +75,7 @@ $on-laptop:        800px;
 
 footer {
   bottom: fixed;
-  background-color: ; lighten;
+  background-color: lighten;
   position: bottom;
   max-height: 100%;
 }
