--- a/css/main.scss
+++ b/css/main.scss
@@ -18,9 +18,9 @@ $text-color:       #111;
 $background-color: green; //#fdfdfd;//
 $brand-color:      #2a7ae2;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+//$grey-color:       #828282;
+//$grey-color-light: lighten($grey-color, 40%);
+//$grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
 $content-width:    800px;
@@ -75,7 +75,7 @@ $on-laptop:        800px;
 
 footer {
   bottom: fixed;
-  background-color: lighten;
+  background-color: black;
   position: bottom;
   max-height: 100%;
 }
