--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 
 
-// Our variables
+/* // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
@@ -18,9 +18,9 @@ $text-color:       #111;
 $background-color: green; //#fdfdfd;//
 $brand-color:      #2a7ae2;
 
-//$grey-color:       #828282;
-//$grey-color-light: lighten($grey-color, 40%);
-//$grey-color-dark:  darken($grey-color, 25%);
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
 $content-width:    800px;
