--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 
 
-/* // Our variables
+/*// Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
@@ -26,7 +26,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 $content-width:    800px;
 
 $on-palm:          600px;
-$on-laptop:        800px;
+$on-laptop:        800px;  */
 
 
 
