--- a/css/main.scss
+++ b/css/main.scss
@@ -36,9 +36,8 @@ $on-laptop:        800px;
 //         padding-right: $spacing-unit / 2;
 //         padding-left: $spacing-unit / 2;
 //     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
+// @mixin media-query($device) {
+  /*  @media screen and (max-width: $device) {
         @content;
     }
 }
