--- a/css/main.scss
+++ b/css/main.scss
@@ -65,10 +65,11 @@ nav {
     background:#999;
 }
 
-.jumbotron,
-.container {
+.jumbotron {
   background-color: white;
   padding-left: 0px;
 }
-
+.container{
+ padding-left: 0px;
+}
 
