--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <html>
   <header>
 
-  <div class="wrapper">
+  <div>
 
     <!--<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>-->
 
