--- a/css/main.scss
+++ b/css/main.scss
@@ -66,13 +66,12 @@ nav {
     background:#999;
 }
 
-.jumbotron {
+/*.jumbotron {
   background-color: white;
   padding-left: 0px;
-}
+} */
 .container{
  padding-left: 0px;
- padding-top: 10px;
 }
 
 h1{
