add jumbotron and padding to h1

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,14 +66,15 @@ nav {
     background:#999;
 }
 
-/*.jumbotron {
+.jumbotron {
   background-color: white;
   padding-left: 0px;
-} */
+} 
 .container{
  padding-left: 0px;
 }
 
 h1{
  padding-left: 0px;
+ padding-top: 10px;
 }
