--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <link href="starter-template.css" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,400italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 </head>
 </html>
