change button font color

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,7 +70,7 @@ h1{
  padding-left: 0px;
  padding-top: 10px;
 }
-.btn a,
-.btn a:visited {
+.btn-primary,
+.btn-primary:visited {
  color: white;
 }
