--- a/css/main.scss
+++ b/css/main.scss
@@ -70,7 +70,7 @@ h1{
  padding-left: 0px;
  padding-top: 10px;
 }
-.btn-primary,
-.btn-primary:visited {
+a.btn-primary,
+a.btn-primary:visited {
  color: white;
 }
