--- a/css/main.scss
+++ b/css/main.scss
@@ -74,8 +74,8 @@ a.btn-primary,
 a.btn-primary:visited {
  color: white;
 }
-.container div {
+.main-content {
  max-width: 80%;
- padding: 20px;
+ padding: 0 20px 0 0;
 
 }
