--- a/css/main.scss
+++ b/css/main.scss
@@ -77,5 +77,9 @@ a.btn-primary:visited {
 .main-content {
  max-width: 80%;
  padding: 0 20px 0 0;
+ float: left;
+}
 
+.side-bar{ width:20%;
+ float:left;
 }
