ul style update

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,7 +66,10 @@ nav {
  padding-left: 0px;
 }
 
-ul{ text-decoration: none;}
+ul{margin: 0 0 0 -20px;
+list-style:none;
+
+}
 
 h1{
  padding-left: 0px;
