width on main-content

--- a/css/main.scss
+++ b/css/main.scss
@@ -80,7 +80,8 @@ a.btn-primary:visited {
  color: white;
 }
 .main-content {
- max-width: 80%;
+ width: 100%;
+ max-width: 900px;
  padding: 0 20px 0 0;
  float: left;
 }
