adding margin to side bar

--- a/css/main.scss
+++ b/css/main.scss
@@ -80,14 +80,14 @@ a.btn-primary:visited {
  color: white;
 }
 .main-content {
- width: 100%;
- max-width: 900px;
+ max-width: 80%;
  padding: 0 20px 0 0;
  float: left;
 }
 
 .side-bar{ width:20%;
  float:left;
+ margin: 100px 0 0 2px;
 }
 
 .archives, .archives h2{
