add archive to every page?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,33 @@
     <div class="jumbotron">
       <div class="container">
         {{ content }}
+        <div class="side-bar">
+      
+      <div class="archives">
+        <h2>Archives</h2>
+        <ul>
+          <li>
+            January
+          </li>
+          <li>
+            February
+          </li>
+          <li>
+            March
+          </li>
+          <li>
+            April
+          </li>
+          <li>
+            May
+          </li>
+          <li>
+            June
+          </li>
+        </ul>
+      </div>
+      
+      </div>
       </div>
     </div>
   </body>
