--- a/css/main.scss
+++ b/css/main.scss
@@ -91,6 +91,7 @@ a.btn-primary:visited {
  float:right;
  margin: 100px 0 0 20px;
  display: inline-block;
+ padding-left: 30px;
 }
 
 .archives, .archives h2{
