--- a/css/main.scss
+++ b/css/main.scss
@@ -97,6 +97,8 @@ a.btn-primary:visited {
 
 .archives, .archives h2{
  color: #1756a9;
+ text-align: center;
+ margin: 0;
 }
 a:hover {
  text-decoration: none;
