--- a/css/main.scss
+++ b/css/main.scss
@@ -93,6 +93,7 @@ a.btn-primary:visited {
  margin: 100px 0 0 20px;
  display: inline-block;
  padding-left: 30px;
+ background-color: #999;
 }
 
 .archives, .archives h2{
