--- a/css/main.scss
+++ b/css/main.scss
@@ -66,7 +66,7 @@ nav {
  padding-left: 0px;
 }
 
-ul{margin: 0 0 0 -20px;
+.archives ul{margin: 0 0 0 -20px;
 list-style:none;
 text-align: center;
 
