--- a/css/main.scss
+++ b/css/main.scss
@@ -94,6 +94,7 @@ a.btn-primary:visited {
  display: inline-block;
  padding-left: 30px;
  background-color: #999;
+ border: 2px solid black;
 }
 
 .archives, .archives h2{
