--- a/css/main.scss
+++ b/css/main.scss
@@ -94,7 +94,8 @@ a.btn-primary:visited {
  display: inline-block;
  padding-left: 30px;
  background-color: #999;
- border: 2px solid black;
+ border: 2px solid;
+ border-radius: 5px;
 }
 
 .archives, .archives h2{
