--- a/css/main.scss
+++ b/css/main.scss
@@ -93,9 +93,9 @@ a.btn-primary:visited {
  margin: 100px 0 0 20px;
  display: inline-block;
  padding-left: 30px;
- background-color: #999;
- border: 2px solid;
+ background-color: white;
  border-radius: 5px;
+ box-shadow: 10px 10px 5px #888888;
 }
 
 .archives, .archives h2{
