--- a/css/main.scss
+++ b/css/main.scss
@@ -95,7 +95,7 @@ a.btn-primary:visited {
  padding-left: 30px;
  background-color: white;
  border-radius: 5px;
- box-shadow: 10px 10px 5px #888888;
+ box-shadow: 5px #888888;
 }
 
 .archives, .archives h2{
