fixing archive header

--- a/css/main.scss
+++ b/css/main.scss
@@ -102,6 +102,7 @@ a.btn-primary:visited {
  color: #1756a9;
  text-align: center;
  margin: 0;
+ padding-bottom: 3px;
 }
 a:hover {
  text-decoration: none;
