adding more space around h2

--- a/css/main.scss
+++ b/css/main.scss
@@ -93,6 +93,7 @@ a.btn-primary:visited {
  margin: 100px 0 0 20px;
  display: inline-block;
  padding-left: 30px;
+ padding-right: 10px;
  background-color: white;
  border-radius: 5px;
  box-shadow: 5px  5px 5px 1px #888888;
@@ -102,7 +103,7 @@ a.btn-primary:visited {
  color: #1756a9;
  text-align: center;
  margin: 0;
- padding-bottom: 3px;
+ padding-bottom: 5px;
 }
 a:hover {
  text-decoration: none;
