--- a/css/main.scss
+++ b/css/main.scss
@@ -96,7 +96,7 @@ a.btn-primary:visited {
  padding-right: 10px;
  background-color: white;
  border-radius: 5px;
- box-shadow: 5px  5px 5px 1px #888888;
+ box-shadow: 5px  5px 5px 1px #ddd;
 }
 
 .archives, .archives h2{
