--- a/css/main.scss
+++ b/css/main.scss
@@ -108,7 +108,10 @@ a.btn-primary:visited {
 a:hover {
  text-decoration: none;
 }
+a.post-link {
+ max-width: 250px;
+}
 
 .home {
- max-width: 400px;
+ max-width: 250px;
 }
