--- a/css/main.scss
+++ b/css/main.scss
@@ -142,8 +142,8 @@ a.post-link {
 
 .nav-toggle:before {
  content: "\2192";
- font-weight: 600;
- color: white;
+ font-weight: 800;
+ color: #fff;
  
 }
 
