--- a/css/main.scss
+++ b/css/main.scss
@@ -124,6 +124,7 @@ a.post-link {
   width: 100%;
   max-width: 250px;
   background-color: #888;
+  box-sizing: border-box;
   padding: 20px;
   color: white;
   //margin-left: -250px;//
@@ -132,8 +133,9 @@ a.post-link {
 .nav-toggle {
  position: absolute;
  right: -40px;
+ top: 0px;
  width: 40px;
- height: 70px;
+ height: 40px;
  background-color: #888;
   line-height: 40px;
   text-decoration: none;
