--- a/css/main.scss
+++ b/css/main.scss
@@ -130,6 +130,11 @@ a.post-link {
   margin-left: -250px;
 }
 
+.nav-side.nav-open {
+  margin-left: 0px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, .1);
+}
+
 .nav-toggle {
  position: absolute;
  right: -40px;
