--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,5 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <srcipt src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></srcipt>
-  <script src="../nav.js"></script>
+  <script src=".../nav.js"></script>
 </head>
