--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,6 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,400italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="../nav.js"></script>
+<script src="staq/nav.js"></script>
 </head>
 </html>
