--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: 'ChunkFive Ex','Open Sans', sans-serif;
+$base-font-family: sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -75,6 +75,7 @@ text-align: center;
 h1{
  padding-left: 0px;
  padding-top: 10px;
+ font-family: "ChunkFive Ex", sans-serif;
 }
 a.btn-primary,
 a.btn-primary:visited {
