--- a/css/main.scss
+++ b/css/main.scss
@@ -123,9 +123,10 @@ a.post-link {
   height: 100%;
   width: 100%;
   max-width: 250px;
-  background-color: #888;
+  background-color: #fff;
   box-sizing: border-box;
   padding: 20px;
-  color: white;
-  margin-left: -250px;
+  color: #888;
+  margin-left: 50px;
+  margin-right: 50px;
 }
