--- a/css/main.scss
+++ b/css/main.scss
@@ -135,3 +135,11 @@ a.post-link {
   margin-left: 50px;
   margin-right: 50px;
 }
+.headerDivider {
+     border-left:1px solid #38546d; 
+     border-right:1px solid #16222c; 
+     height:80px;
+     position:absolute;
+     right:249px;
+     top:10px; 
+}
