--- a/css/main.scss
+++ b/css/main.scss
@@ -98,6 +98,7 @@ a.btn-primary:visited {
  padding-left: 30px;
  padding-right: 10px;
  background-color: white;
+ position: fixed;
 }
 
 .archives, .archives h2{
