--- a/css/main.scss
+++ b/css/main.scss
@@ -90,7 +90,7 @@ a.btn-primary:visited {
  float: left;
  display: inline-block;
 }
-.main-content.content{
+.content{
  font-size: 1.2em;
  max-width: 550px;
 }
