--- a/css/main.scss
+++ b/css/main.scss
@@ -90,7 +90,10 @@ a.btn-primary:visited {
  float: left;
  display: inline-block;
 }
-
+div.content {
+ max-width: 550px;
+ font-size:  1.2em;
+}
 .side-bar{ 
  width:20%;
  float:right;
