experiment with calling classes
I added "div.content" to change the font size and width of the post content on the home page. I want to see if trying this new way to call class, "content", will work on your page. I tried it on my page and Jekyll failed to build my page. The css selectors I used were element and class.

--- a/css/main.scss
+++ b/css/main.scss
@@ -88,6 +88,10 @@ a.btn-primary:visited {
  float: left;
  display: inline-block;
 }
+div.content {
+ font-size: 1.2em;
+ max-width: 550px;
+}
 
 .side-bar{ width:20%;
  float:right;
