--- a/css/main.scss
+++ b/css/main.scss
@@ -90,12 +90,8 @@ a.btn-primary:visited {
  display: inline-block;
 }
 
-<<<<<<< HEAD
 .side-bar{ 
  width:20%;
-=======
-.side-bar{ width:20%;
->>>>>>> parent of fd0d977... Update main.scss
  float:right;
  margin: 100px 0 0 20px;
  display: inline-block;
@@ -112,6 +108,7 @@ a.btn-primary:visited {
  text-align: center;
  margin: 0;
  padding-bottom: 5px;
+ line-height: 1.;
 }
 a:hover {
  text-decoration: none;
