--- a/css/main.scss
+++ b/css/main.scss
@@ -31,6 +31,7 @@ $on-laptop:        800px;
  @mixin media-query($device) {
   @media screen and (max-width: $device) {
         @content;
+        padding-top: 30px;
           
     }
 }
