--- a/css/main.scss
+++ b/css/main.scss
@@ -93,15 +93,14 @@ div.content {
  max-width: 550px;
 }
 
-.side-bar{ width:20%;
+.side-bar { 
+ width:20%;
  float:right;
  margin: 100px 0 0 20px;
  display: inline-block;
  padding-left: 30px;
  padding-right: 10px;
  background-color: white;
- border-radius: 5px;
- box-shadow: 5px  5px 5px 1px #ddd;
 }
 
 .archives, .archives h2{
