fix .archives, .archives h2

--- a/css/main.scss
+++ b/css/main.scss
@@ -104,11 +104,11 @@ div.content {
 }
 
 .archives, .archives h2{
- color: #888;
+ color: #1756a9;
  text-align: center;
  margin: 0;
  padding-bottom: 5px;
- line-height: 1.75;
+ line-height: 1.1;
 }
 .archives h2{
  color:#1756a9;
