--- a/css/main.scss
+++ b/css/main.scss
@@ -108,7 +108,7 @@ div.content {
  text-align: center;
  margin: 0;
  padding-bottom: 5px;
- line-height: 1.1;
+ line-height: 1.75em;
 }
 .archives h2{
  color:#1756a9;
