--- a/css/main.scss
+++ b/css/main.scss
@@ -94,7 +94,7 @@ div.content {
  font-size: 1.2em;
  max-width: 550px;
 }
-
+// Jekyll broke when I tried to remove the border-radius and box-shadow on March 7, 2016
 .side-bar { 
  width:20%;
  float:right;
