--- a/css/main.scss
+++ b/css/main.scss
@@ -86,7 +86,7 @@ a.btn-primary:visited {
 .main-content {
  width: 100%;
  max-width: 900px;
- padding: 0 20px 0 0;
+ padding: 0 0 0 0;
  float: left;
  display: inline-block;
 }
