archives font to chunkfive ex

--- a/css/main.scss
+++ b/css/main.scss
@@ -112,6 +112,7 @@ div.content {
  margin: 0;
  padding-bottom: 5px;
  line-height: 1.75em;
+ font-family: "ChunkFive Ex";
 }
 a:hover {
  text-decoration: none;
