--- a/css/main.scss
+++ b/css/main.scss
@@ -90,6 +90,7 @@ a.btn-primary:visited {
  padding: 0 0 0 0;
  float: left;
  display: inline-block;
+ margin-top: 26px;
 }
 div.content {
  font-size: 1.2em;
