--- a/css/main.scss
+++ b/css/main.scss
@@ -79,6 +79,7 @@ h1{
  padding-top: 10px;
  font-family: "ChunkFive Ex";
  font-size: 40px;
+ color: #1756a9;
 }
 a.btn-primary,
 a.btn-primary:visited {
