--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
       <div class="container">
       </div>
     </div>
-    <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
+    <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">Back to posts &#x25c0;</a></p>
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <!--<header class="post-header">-->
