--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
       <div class="container">
       </div>
     </div>
-    <p class="back-to-posts"><a class="btn btn-primary btn-lg" href="{{ "/blog_posts.html" | prepend: site.baseurl }}" role="button">Back to posts &#8672;</a></p>
+    <p class="back-to-posts"><a class="" href="{{ "/blog_posts.html" | prepend: site.baseurl }}" role="button">Back to posts &#8672;</a></p>
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <!--<header class="post-header">-->
