--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,5 @@ layout: default
   </div>
   
 </article>
+    <p class="back-to-posts"><a class="" href="{{ "/blog_posts.html" | prepend: site.baseurl }}" role="button">Back to posts &#8672;</a></p>
 
