add font to head "PT Serif"

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
 <script src="staq/nav.js"></script>
 
   <srcipt src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></srcipt>
+  <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700italic,700' rel='stylesheet' type='text/css'>
   <script src="../nav.js"></script>
 </head>
 </html>
