--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 
     {% include header.html %}
 
-    <div class="jumbotron">
-      <div class="container">
+    <div class="">
+      <div class="">
         {{ content }}
         <div class="side-bar">
       
