--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,8 @@ layout: default
 
  {% include header.html %}
 
-    <div class="jumbotron">
-      <div class="container">
+    <div class="">
+      <div class="">
       </div>
     </div>
     <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
