center text on the page

--- a/css/main.scss
+++ b/css/main.scss
@@ -91,6 +91,7 @@ a.btn-primary:visited {
  float: left;
  display: inline-block;
  margin-top: 26px;
+ margin-left: 25%;
 }
 div.content {
  font-size: 1.2em;
