--- a/css/main.scss
+++ b/css/main.scss
@@ -90,7 +90,7 @@ a.btn-primary:visited {
  padding: 0 0 0 0;
  float: left;
  display: inline-block;
- margin-top: 26px;
+ margin-top: 25%;
  margin-left: 25%;
 }
 div.content {
