--- a/css/main.scss
+++ b/css/main.scss
@@ -163,3 +163,14 @@ h1.post-title{
 .back-to-posts{
  max-width: 100px;
 }
+footer {
+ width: 100%;
+ height: 100px;
+ position: absolute;
+ bottom: 0;
+ left: 0;
+}
+footer p {
+ max-width: 600px;
+ margin-left: 25%;
+}
