--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   {% include head.html %}
 
   <body>
+  <div class="wrapper">
 
     {% include header.html %}
 
@@ -40,5 +41,6 @@
       </div>
     </div>
     {% include footer.html %}
+    </div>
   </body>
 </html>
