--- a/css/main.scss
+++ b/css/main.scss
@@ -55,17 +55,9 @@ $on-laptop:        800px;
   float: left;
 }
 nav {
-    background: white//#999;
+    background: #aaa//#999;
 }
 
-.jumbotron {
-  background-color: white;
-  padding-top:25px;
-  padding-bottom:20px;
-} 
-.container{
- padding-left: 0px;
-}
 
 .archives ul{
  margin: 0 0 0 -20px;
@@ -85,10 +77,7 @@ a.btn-primary:visited {
  color: white;
 }
 
-div.content {
- font-size: 1.2em;
- max-width: 550px;
-}
+
 // Jekyll broke when I tried to remove the border-radius and box-shadow on March 7, 2016
 .side-bar { 
  width: 20%;
@@ -120,11 +109,7 @@ a.post-link {
 .date {
  font-weight: bold;
 }
-.home {
- max-width: 550px;
- display: inline-block;
- margin-top: 50px;
-}
+
 .nav-side {
   position: fixed;
   left: 0;
@@ -145,16 +130,11 @@ p {
 .jumbotron h1{
  font-size: 40px;
 }
-.post{
- max-width: 550px;
- display: inline-block;
-}
+
 h1.post-title{
   color: #1756a9;
 }
-.back-to-posts{
- max-width: 100px;
-}
+
 
 .wrapper{
  min-height: 100%;
