--- a/css/main.scss
+++ b/css/main.scss
@@ -147,3 +147,11 @@ h1.post-title{
 .home {
  padding-top:8%;
 }
+.container-fluid{
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  height:30px;
+  width:100%;
+  background:#999;
+}
