footer background color back to white

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,9 +54,7 @@ $on-laptop:        800px;
   max-height: 20px;
   float: left;
 }
-nav {
-    background: #aaa//#999;
-}
+
 
 
 .archives ul{
@@ -153,5 +151,8 @@ h1.post-title{
   bottom:0px;
   height:30px;
   width:100%;
-  background:#999;
+  background:white;
+}
+nav {
+    background: #aaa//#999;
 }
