--- a/css/main.scss
+++ b/css/main.scss
@@ -151,7 +151,7 @@ h1.post-title{
   bottom:0px;
   height:30px;
   width:100%;
-  background:white;
+  background:#fff;
 }
 nav {
     background: #aaa//#999;
