--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,14 @@
     <nav class="navbar navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-           <a class="navbar-brand logo alignment" href="/staq"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'></a>
+            <a class="navbar-brand logo alignment" href="/staq"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'></a>
+        <ul class="nav-options">
+          <li>Home</li>
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>GitHub</li>
+
+        </ul>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           
