--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,16 +8,15 @@
     <nav class="navbar navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand logo alignment" href="/staq"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'></a>
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand logo alignmen" href="#"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
