save navbar change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,13 @@
           </button>
           <a class="navbar-brand logo alignmen" href="#"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'></a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse in" aria-expanded="true">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
