--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,9 @@
         <div id="navbar" class="navbar-collapse collapse in" aria-expanded="true">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Facebook</a></li>
+            <li><a href="#contact">Twitter</a></li>
+            <li><a href="#contact">Github</a></li>
           </ul>
         </div>
         </div><!--/.navbar-collapse -->
