--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,23 +7,26 @@
 
     <nav class="navbar navbar-fixed-top">
       <div class="container">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand logo alignmen" href="#"><img src='http://staq-devblog-assets.s3.amazonaws.com/images/staq_logo_transparent.png'>Integration software made in Baltimore</a>
+          <a class="navbar-brand" href="#">Project name</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse in" aria-expanded="true">
+        <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Facebook</a></li>
-            <li><a href="#contact">Twitter</a></li>
-            <li><a href="#contact">Github</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
-        </div>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
