--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,10 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Facebook</a></li>
+            <li><a href="#contact">Github</a></li>
+            <li><a href="#contact">Twitter</a></li>
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
