--- a/css/main.scss
+++ b/css/main.scss
@@ -154,8 +154,8 @@ h1.post-title{
   width:100%;
   background:#fff;
 }
-nav {
-    background: #aaa//#999;
+.navbar-inverse {
+    background-color: #162732;//#999;
 }
 div#navbar {
  float: right;
