--- a/css/main.scss
+++ b/css/main.scss
@@ -154,7 +154,7 @@ h1.post-title{
   width:100%;
   background:#fff;
 }
-.navbar-inverse {
+nav.navbar.navbar-inverse.navbar-fixed-top {
     background-color: #162732;//#999;
 }
 div#navbar {
