--- a/css/main.scss
+++ b/css/main.scss
@@ -160,3 +160,6 @@ nav.navbar.navbar-inverse.navbar-fixed-top {
 div#navbar {
  float: right;
 }
+.navbar-inverse{
+ background-image: linear-gradient(to bottom,#162732, 100%);
+}
