--- a/css/main.scss
+++ b/css/main.scss
@@ -161,5 +161,5 @@ div#navbar {
  float: right;
 }
 .navbar-inverse{
- background-image: linear-gradient(to bottom,#162732, 100%);
+ background-image: linear-gradient(to bottom,#162732, #162732 100%);
 }
