--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="staq_logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="staq_logo.png" class="staq_logo"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
