--- a/css/main.scss
+++ b/css/main.scss
@@ -163,3 +163,9 @@ div#navbar {
 .navbar-inverse{
  background-image: linear-gradient(to bottom,#162732, #162732 100%);
 }
+.staq_logo {
+ margin-top: -12%;
+}
+img{
+ height: inherit;
+}
