--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,14 +16,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="staq_logo.png" class="staq_logo"></a>
+          <a class="navbar-brand" href="/staq"><img src="staq_logo.png" class="staq_logo"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Facebook</a></li>
-            <li><a href="#contact">Github</a></li>
-            <li><a href="#contact">Twitter</a></li>
+            <li class="active"><a href="#about">About</a></li>
+            <li><a href="#facebook">Facebook</a></li>
+            <li><a href="#github">Github</a></li>
+            <li><a href="#twitter">Twitter</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
