--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/about.html">About</a></li>
+            <li class="active"><a href="/staq/about.html">About</a></li>
             <li><a href="#facebook">Facebook</a></li>
             <li><a href="#github">Github</a></li>
             <li><a href="#twitter">Twitter</a></li>
